[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/menus/New Game Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/img/reset.png" type="Texture" id=3]
[ext_resource path="res://scenes/nodes/LabeledLineEdit.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/nodes/LineEditHandler.gd" type="Script" id=5]
[ext_resource path="res://scenes/nodes/Popup.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.694118, 0.184314, 0.184314, 1 )
border_width_right = 4
border_color = Color( 0.333333, 0.105882, 0.105882, 1 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[node name="Root" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
back_scene_path = "res://scenes/menus/Main Menu.tscn"

[node name="Panel" type="Panel" parent="."]
margin_right = 824.0
margin_bottom = 400.0
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 126.0
margin_bottom = 53.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 70.0
margin_right = -30.0
margin_bottom = -80.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L" type="VBoxContainer" parent="Panel/Options"]
margin_left = 32.0
margin_right = 332.0
margin_bottom = 250.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" parent="Panel/Options/L" instance=ExtResource( 4 )]
label = "Name"
default_text = "My Factory"
placeholder = "Factory Name"

[node name="R" type="VBoxContainer" parent="Panel/Options"]
margin_left = 432.0
margin_right = 732.0
margin_bottom = 250.0
rect_min_size = Vector2( 300, 0 )
rect_pivot_offset = Vector2( -709.451, 0 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seed" type="VBoxContainer" parent="Panel/Options/R"]
margin_right = 300.0
margin_bottom = 81.0
theme = ExtResource( 1 )
custom_constants/separation = 9

[node name="Label" type="Label" parent="Panel/Options/R/Seed"]
margin_right = 300.0
margin_bottom = 34.0
theme = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Seed"

[node name="Reset" type="Button" parent="Panel/Options/R/Seed/Label"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -32.9344
margin_top = -18.9706
margin_right = 61.0656
margin_bottom = 75.0294
rect_scale = Vector2( 0.4, 0.4 )
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Panel/Options/R/Seed"]
margin_top = 43.0
margin_right = 300.0
margin_bottom = 81.0
theme = ExtResource( 1 )
max_length = 10
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 5 )

[node name="ButtonCancel" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -57.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 4
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCreate" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -232.0
margin_top = -57.0
margin_right = -137.0
margin_bottom = -19.0
size_flags_horizontal = 4
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupAlreadyExists" parent="." instance=ExtResource( 6 )]
text = "Are you sure?

You already have a save file with that name"

[connection signal="pressed" from="Panel/Options/R/Seed/Label/Reset" to="." method="_on_Reset_pressed"]
[connection signal="focus_exited" from="Panel/Options/R/Seed/LineEdit" to="." method="_on_Seed_entered" binds= [ "" ]]
[connection signal="text_changed" from="Panel/Options/R/Seed/LineEdit" to="." method="_on_Seed_changed"]
[connection signal="text_entered" from="Panel/Options/R/Seed/LineEdit" to="." method="_on_Seed_entered"]
[connection signal="pressed" from="Panel/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
[connection signal="pressed" from="Panel/ButtonCreate" to="." method="_on_ButtonCreate_pressed"]
